--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Peas</title>
     <link rel="stylesheet" href="assets/styles/navbar.css">
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/shopping-cart.css">
 </head>
 <body>
-    <h1>World Peas </h1>
+    
 </body>
 </html>
