Add Header And Fonts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Peas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/navbar.css">
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
-    <h1>World Peas </h1>
+<header>
+    <div class="logo">
+            <a href="index.html">World Peas</a>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Newstand</a></li>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">My profile</a></li>
+            <li><a href="#" class="basket">Basket</a></li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
