Add: Hero Section

--- a/index.html
+++ b/index.html
@@ -30,5 +30,14 @@
     </nav>
     </div>
 </header>
+<main>
+    <section class="hero">
+        <div class="container">
+            <p class="description">We’re farmers, purveyors, and eaters of organically grown food.</p>
+            <a href="" class="browse-shop">Browse our shop</a>
+        </div>
+    </section>
+    <!-- section.some-vegetables>.containe.col*2 -->
+</main>
 </body>
 </html>
