--- a/product.html
+++ b/product.html
@@ -14,6 +14,22 @@
     <link rel="stylesheet" href="assets/styles/product.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+        <div class="logo">
+                <a href="index.html">World Peas</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Newstand</a></li>
+                <li><a href="#">Who we are</a></li>
+                <li><a href="#">My profile</a></li>
+                <li><a href="#" class="basket">Basket</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
     
 </body>
 </html>
