Add: Some Vegetables Section

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@
 <main>
     <section class="hero">
         <div class="container">
-            <p class="description">We’re farmers, purveyors, and eaters of organically grown food.</p>
+            <p class="description">We’re <i>farmers, purveyors,</i> and <i>eaters</i> of organically grown food.</p>
             <a href="" class="browse-shop">Browse our shop</a>
         </div>
     </section>
-    <!-- section.some-vegetables>.containe.col*2 -->
+    <section class="some-vegetables">
+        <div class="container">
+            <div class="col"><img src="assets/images/watercress.webp" alt="Watercress Photo"></div>
+            <figure >
+                <img src="assets/images/vegetables.webp" alt="Vegetables Photo">
+                <figcaption>Central California — The person who grew these was located in Central California and, er, hopefully very well-compensated.</figcaption>
+            </figure>
+        </div>
+    </section>
 </main>
 </body>
 </html>
