--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col"><img src="assets/images/watercress.webp" alt="Watercress Photo"></div>
             <figure >
                 <img src="assets/images/vegetables.webp" alt="Vegetables Photo">
-                <figcaption>Central California — The person who grew these was located in Central California and, er, hopefully very well-compensated.</figcaption>
+                <figcaption><b>Central California —</b> The person who grew these was located in Central California and, er, hopefully very well-compensated.</figcaption>
             </figure>
         </div>
     </section>
