--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#">Newstand</a></li>
             <li><a href="#">Who we are</a></li>
             <li><a href="#">My profile</a></li>
-            <li><a href="#" class="basket">Basket</a></li>
+            <li><a href="shopping-cart.html" class="basket">Basket</a></li>
         </ul>
     </nav>
     </div>
