--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -25,10 +25,45 @@
                 <li><a href="#">Newstand</a></li>
                 <li><a href="#">Who we are</a></li>
                 <li><a href="#">My profile</a></li>
-                <li><a href="#" class="basket">Basket</a></li>
+                <li><a href="shopping-cart.html" class="basket">Basket</a></li>
             </ul>
         </nav>
         </div>
     </header>
+    <main>
+        <section class="head-title">
+            <div class="container">
+                <h1>Basket</h1>
+                <span>3 items</span>
+            </div>
+        </section>
+        <!-- <section class="shopping-basket">
+            <div class="container">
+                <div class="product-list">
+                    <div class="product">
+                        <div class="product image">
+                            <img src="assets/images/Tomato-small.webp" alt="Tomato Image">
+                        </div>
+                        <div class="product-details">
+                            <h2>Heirloom tomato</h2>
+                            <span>$5.99 / lb</span>
+                            <div class="weight"><span>1 lb</span></div>
+                        </div>
+                        <div class="price"></div>
+                    </div>
+                </div>
+                <div class="summary">
+                    <h2>Order summary</h2>
+                    <ul>
+                        <li><span>Subtotal</span><span>$27.44</span></li>
+                        <li><span>Shipping</span><span>$3.99</span></li>
+                        <li><span>Shipping</span><span>$2.00</span></li>
+                        <li><span>Total</span><span>$33.43</span></li>
+                        <a href="#">Continue to payment</a>
+                    </ul>
+                </div>
+            </div>
+        </section> 
+    </main>-->
 </body>
 </html>
