--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -37,11 +37,12 @@
                 <span>3 items</span>
             </div>
         </section>
-        <!-- <section class="shopping-basket">
+        <section class="shopping-basket">
             <div class="container">
                 <div class="product-list">
                     <div class="product">
-                        <div class="product image">
+                        <div class="product-info">
+                        <div class="product-image">
                             <img src="assets/images/Tomato-small.webp" alt="Tomato Image">
                         </div>
                         <div class="product-details">
@@ -49,7 +50,34 @@
                             <span>$5.99 / lb</span>
                             <div class="weight"><span>1 lb</span></div>
                         </div>
-                        <div class="price"></div>
+                        </div>
+                        <div class="price"><span>$5.99</span></div>
+                    </div>
+                    <div class="product">
+                        <div class="product-info">
+                        <div class="product-image">
+                            <img src="assets/images/ginger-small.webp" alt="Tomato Image">
+                        </div>
+                        <div class="product-details">
+                            <h2>Heirloom tomato</h2>
+                            <span>$5.99 / lb</span>
+                            <div class="weight"><span>1 lb</span></div>
+                        </div>
+                        </div>
+                        <div class="price"><span>$5.99</span></div>
+                    </div>
+                    <div class="product">
+                        <div class="product-info">
+                        <div class="product-image">
+                            <img src="assets/images/onion.webp" alt="Tomato Image">
+                        </div>
+                        <div class="product-details">
+                            <h2>Heirloom tomato</h2>
+                            <span>$5.99 / lb</span>
+                            <div class="weight"><span>1 lb</span></div>
+                        </div>
+                        </div>
+                        <div class="price"><span>$5.99</span></div>
                     </div>
                 </div>
                 <div class="summary">
@@ -58,12 +86,12 @@
                         <li><span>Subtotal</span><span>$27.44</span></li>
                         <li><span>Shipping</span><span>$3.99</span></li>
                         <li><span>Shipping</span><span>$2.00</span></li>
-                        <li><span>Total</span><span>$33.43</span></li>
-                        <a href="#">Continue to payment</a>
+                        <li class="total"><span>Total</span><span>$33.43</span></li>
                     </ul>
+                    <a href="#">Continue to payment</a>
                 </div>
             </div>
         </section> 
-    </main>-->
+    </main>
 </body>
 </html>
