Add: Heading Title To The Product Page

--- a/product.html
+++ b/product.html
@@ -30,6 +30,75 @@
         </nav>
         </div>
     </header>
-    
+    <main>
+        <section class="head-title">
+            <div class="container">
+                <div class="headind">
+                <h1>Produce</h1>
+                <span>Fresh  —  August 21, 2023</span>
+                </div>
+                <div class="sorts-btn">
+                    <span>Default</span>
+                    <span>A-Z</span>
+                    <span>List view</span>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="shopping-basket">
+            <div class="container">
+                <div class="product-list">
+                    <div class="product">
+                        <div class="product-info">
+                        <div class="product-image">
+                            <img src="assets/images/Tomato-small.webp" alt="Tomato Image">
+                        </div>
+                        <div class="product-details">
+                            <h2>Heirloom tomato</h2>
+                            <span>$5.99 / lb</span>
+                            <div class="weight"><span>1 lb</span></div>
+                        </div>
+                        </div>
+                        <div class="price"><span>$5.99</span></div>
+                    </div>
+                    <div class="product">
+                        <div class="product-info">
+                        <div class="product-image">
+                            <img src="assets/images/ginger-small.webp" alt="Tomato Image">
+                        </div>
+                        <div class="product-details">
+                            <h2>Heirloom tomato</h2>
+                            <span>$5.99 / lb</span>
+                            <div class="weight"><span>1 lb</span></div>
+                        </div>
+                        </div>
+                        <div class="price"><span>$5.99</span></div>
+                    </div>
+                    <div class="product">
+                        <div class="product-info">
+                        <div class="product-image">
+                            <img src="assets/images/onion.webp" alt="Tomato Image">
+                        </div>
+                        <div class="product-details">
+                            <h2>Heirloom tomato</h2>
+                            <span>$5.99 / lb</span>
+                            <div class="weight"><span>1 lb</span></div>
+                        </div>
+                        </div>
+                        <div class="price"><span>$5.99</span></div>
+                    </div>
+                </div>
+                <div class="summary">
+                    <h2>Order summary</h2>
+                    <ul>
+                        <li><span>Subtotal</span><span>$27.44</span></li>
+                        <li><span>Shipping</span><span>$3.99</span></li>
+                        <li><span>Shipping</span><span>$2.00</span></li>
+                        <li class="total"><span>Total</span><span>$33.43</span></li>
+                    </ul>
+                    <a href="#">Continue to payment</a>
+                </div>
+            </div>
+        </section>  -->
+    </main>
 </body>
 </html>
