Add: Style To Heading Title

--- a/product.html
+++ b/product.html
@@ -33,12 +33,12 @@
     <main>
         <section class="head-title">
             <div class="container">
-                <div class="headind">
+                <div class="heading">
                 <h1>Produce</h1>
-                <span>Fresh  —  August 21, 2023</span>
+                <p><b>Fresh  — </b><span>August 21, 2023</span></p>
                 </div>
                 <div class="sorts-btn">
-                    <span>Default</span>
+                    <span class="default-btn">Default</span>
                     <span>A-Z</span>
                     <span>List view</span>
                 </div>
