--- a/product.html
+++ b/product.html
@@ -44,61 +44,32 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="shopping-basket">
+        <section class="product-info">
             <div class="container">
-                <div class="product-list">
                     <div class="product">
-                        <div class="product-info">
                         <div class="product-image">
-                            <img src="assets/images/Tomato-small.webp" alt="Tomato Image">
+                            <img src="assets/images/Tomato-big.webp" alt="Tomato Image">
                         </div>
                         <div class="product-details">
                             <h2>Heirloom tomato</h2>
                             <span>$5.99 / lb</span>
-                            <div class="weight"><span>1 lb</span></div>
+                            <p>Grown in San Juan Capistrano, CA</p>
                         </div>
-                        </div>
-                        <div class="price"><span>$5.99</span></div>
                     </div>
                     <div class="product">
-                        <div class="product-info">
                         <div class="product-image">
-                            <img src="assets/images/ginger-small.webp" alt="Tomato Image">
+                            <img src="assets/images/ginger-big.webp" alt="Tomato Image">
                         </div>
                         <div class="product-details">
-                            <h2>Heirloom tomato</h2>
-                            <span>$5.99 / lb</span>
-                            <div class="weight"><span>1 lb</span></div>
+                            <h2>Organic ginger</h2>
+                            <span>$12.99 / lb</span>
+                            <p>Grown in Huntington Beach, CA</p>
                         </div>
-                        </div>
-                        <div class="price"><span>$5.99</span></div>
                     </div>
-                    <div class="product">
-                        <div class="product-info">
-                        <div class="product-image">
-                            <img src="assets/images/onion.webp" alt="Tomato Image">
-                        </div>
-                        <div class="product-details">
-                            <h2>Heirloom tomato</h2>
-                            <span>$5.99 / lb</span>
-                            <div class="weight"><span>1 lb</span></div>
-                        </div>
-                        </div>
-                        <div class="price"><span>$5.99</span></div>
-                    </div>
-                </div>
-                <div class="summary">
-                    <h2>Order summary</h2>
-                    <ul>
-                        <li><span>Subtotal</span><span>$27.44</span></li>
-                        <li><span>Shipping</span><span>$3.99</span></li>
-                        <li><span>Shipping</span><span>$2.00</span></li>
-                        <li class="total"><span>Total</span><span>$33.43</span></li>
-                    </ul>
-                    <a href="#">Continue to payment</a>
-                </div>
+                    <div class="product">1</div>
+                    <div class="product">2</div>
             </div>
-        </section>  -->
+        </section> 
     </main>
 </body>
 </html>
